# crawlerkit

./: .gitignore  CHANGELOG.md  GETTING_STARTED.md  LICENSE  README.md  STRUCTURE.md  TURNSTILE_HANDOFF.md  TURNSTILE_NEXT_SESSION.md  TURNSTILE_SOLVE_PLAN.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
crawlerkit/core/: __init__.py  _logging.py  base_crawler.py  base_parser.py  cookies.py  errors.py  identity.py  proxy.py  tls.py  transport.py
crawlerkit/core/captcha/: __init__.py  base.py  govbr.py  llm_image.py  mcaptcha.py  token_adapters.py  turnstile.py
crawlerkit/core/captcha/_turnstile/: __init__.py  bridge.py  engine.py  env.py  fingerprint.py  frame.py  node_engine.py  widget.py
crawlerkit/core/captcha/_turnstile/sidecar/: chrome_window_props.json  package-lock.json  package.json  sidecar.mjs
docs/: api.md  captcha.md  cracking-govbr-turnstile.md  cracking-govbr.md  cracking-turnstile.md  errors.md  identity.md  index.md  proxy.md  transport-tls.md
examples/: README.md  detran_pa.py  fingerprint_demo.py  quotes.py
scripts/: capture_turnstile.py  harvest_turnstile.py
spike/: README.md  _dump.out  _msg_execute.json  _msg_extraParams.json  _msg_init.json  _msg_overrunBegin.json  _msg_requestExtraParams.json  _msg_translationInit.json  _ntest_last.out  _our.out  _our_chlopt.json  _our_ifenv.json  _run.out  _run2.out  _t.out  _tls.out  _uc.out  _uc_chlopt_raw.txt  _uc_ifenv.json  _uc_iframe.html  _vm_now.js  _vmbranch.txt  _vmfull.txt  _vmt_handlers.txt  _vmtrace.json  _win.py  ja4probe.py  ntest_turnstile.py  tls_test.py  turnstile_spike.py  uc_chlopt.py
spike/re/: iframe.html  package-lock.json  package.json  resolve.js  resolved.js  vm.beau.js  vm.raw.js  wc_err.txt
tests/: test_base_parser.py  test_captcha_registry.py  test_cookies.py  test_errors.py  test_identity_targets.py  test_logging.py  test_mcaptcha.py  test_proxy_release.py  test_tls.py  test_transport_timeout.py  test_turnstile.py
tests/fixtures/turnstile/: detran_pa_form.cookies.json  detran_pa_form.html
