[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "crawlerkit-core"
version = "0.2.2"
description = "Browserless crawler base: curl_cffi transport, TLS/AIA, identity, proxy, captcha, BaseCrawler/BaseParser."
readme = "README.md"
# Upper bound: the Turnstile solver's JS engine (pythonmonkey) segfaults on CPython 3.14's asyncio
# timer binding; pin to 3.11–3.13 until that's fixed upstream.
requires-python = ">=3.11,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Lucas Caovilla", email = "lucasgrisac@gmail.com" }]
keywords = [
    "crawler",
    "scraping",
    "curl_cffi",
    "tls",
    "fingerprint",
    "captcha",
    "browserless",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
# HTTP is curl_cffi ONLY — `requests` is intentionally absent.
dependencies = [
    "curl_cffi>=0.7",
    "browserforge>=1.2",
    "cryptography>=42",
    "certifi>=2024.0",
    "selectolax>=0.3",
    "lxml>=5.0",
    "beautifulsoup4>=4.12",
    "structlog>=24.1",
    "weasyprint>=60",
    # browserless Cloudflare Turnstile solver — runs the challenge JS in SpiderMonkey.
    "pythonmonkey>=1.3",
]

[project.urls]
Homepage = "https://github.com/lucascaovilla/crawlerkit"
Repository = "https://github.com/lucascaovilla/crawlerkit"
Documentation = "https://github.com/lucascaovilla/crawlerkit#readme"
Issues = "https://github.com/lucascaovilla/crawlerkit/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5.0",
    "commitizen>=3.27",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["crawlerkit*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Pyflakes (real errors: undefined names, unused imports) + isort. Style is not enforced.
select = ["F", "I"]

[tool.mypy]
# Targeted at catching "this third-party attribute doesn't actually exist" bugs (e.g. a typo'd
# exception class name silently shadowing real errors at runtime) — not full type-strictness.
# attr-defined (mypy's default-enabled check that catches exactly this) stays on; the codes below
# are disabled because they're systemic curl_cffi/cryptography stub-narrowness (Literal[...]
# unions, generic return types) being narrower than how this codebase intentionally uses them.
python_version = "3.11"
disable_error_code = [
    "arg-type",
    "var-annotated",
    "dict-item",
    "union-attr",
    "index",
    "assignment",
]

[[tool.mypy.overrides]]
module = "weasyprint.*"
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
major_version_zero = true
update_changelog_on_bump = true
